# krypt

./: .gitignore  CHANGELOG.md  README.md  krypt.cabal
app/: Encrypt.hs  KeyGen.hs
src/: Keys.hs  Primes.hs
tests/: TestSuite.hs
