cabal-version:      2.4
name:               krypt
version:            0.0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             NoahSchiro
maintainer:         noahschiro@rocketmail.com

-- A copyright notice.
copyright: See license

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Primes
    --other-modules:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src

executable krypt
    main-is:          KeyGen.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
